[package]
name = "kazyol"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kazyol_plugin_loader = { path = "../kazyol_plugin_loader" }
kazyol_lib = { path = "../kazyol_lib" }
kazyol_api_method_macro = { path = "../kazyol_api_method_macro" }
plugin_example = { path = "../plugin_example" }
protocol = { path = "../protocol" }
server_list_status = { path = "../server_list_status" }
player = { path = "../player" }
ctrlc = "3.2.1"