[package]
name = "player"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kazyol_lib = { path = "../kazyol_lib" }
protocol = { path = "../protocol" }
nbt-parser = { git = "https://github.com/PurpleMyst/nbt-parser" }