[package]
name = "protocol"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kazyol_lib = { path = "../kazyol_lib" }
rand = "0.8.1"
uuid = { version = "0.8.1", features = [ "v4" ] }